--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/dotenv-settings-ui.git"
+    "url": "https://github.com/easynet-world/7165-config-studio.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/dotenv-settings-ui/issues"
+    "url": "https://github.com/easynet-world/7165-config-studio/issues"
   },
-  "homepage": "https://github.com/yourusername/dotenv-settings-ui#readme",
+  "homepage": "https://github.com/easynet-world/7165-config-studio#readme",
   "engines": {
     "node": ">=14.0.0"
   },
@@ -52,6 +52,11 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0"
+    "@types/node": "^20.10.0",
+    "semantic-release": "^23.0.0",
+    "@semantic-release/commit-analyzer": "^12.0.0",
+    "@semantic-release/release-notes-generator": "^12.0.0",
+    "@semantic-release/npm": "^11.0.0",
+    "@semantic-release/github": "^10.0.0"
   }
 }
