Fix GitHub Actions workflow errors
- Update package name to @easynet/config-studio to match npm scope
- Add required permissions for semantic-release (contents, issues, pull-requests)
- Remove redundant GITHUB_TOKEN from checkout step
- Configure patch-only releases starting from 0.0.1

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,7 +4,18 @@
     "main"
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "angular",
+        "releaseRules": [
+          {
+            "type": "*",
+            "release": "patch"
+          }
+        ]
+      }
+    ],
     "@semantic-release/release-notes-generator",
     [
       "@semantic-release/npm",
