--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "type": "git",
     "url": "https://github.com/easynet-world/7165-config-studio.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "bugs": {
     "url": "https://github.com/easynet-world/7165-config-studio/issues"
   },
