fix: uncomment all config options in .env.config-studio template
- All configuration options are now uncommented with default values
- Options will appear in Config Studio UI for easy editing
- Empty values for optional startup config options
- Updated both template file and fallback content

--- a/.env.config-studio
+++ b/.env.config-studio
@@ -1,27 +1,29 @@
 # Config Studio Configuration
-
-# Server Settings
-# Server port number (type:number, min:1, max:65535)
-PORT=8880
-# Server host address (default: localhost)
-HOST=localhost
-# Node.js environment (enum:development|production|test)
-NODE_ENV=development
-
-# Data Directory
-# Custom data directory path for systems registry (optional, relative or absolute path)
-# If not set, defaults to ./data/
-# DATA_DIR=./data
-
-# Logging
-# Log level (enum:debug|info|warn|error)
-LOG_LEVEL=info
-# Enable file watching for real-time updates (enum:true|false)
-FILE_WATCHER_ENABLED=true
-# WebSocket server enabled (enum:true|false)
-WEBSOCKET_ENABLED=true
+# This file contains settings for Config Studio itself
+# All settings are optional - modify as needed
 
 # Theme Configuration
-# Default theme for the UI (enum:default|cyberpunk|vscode-dark|vscode-light|chatgpt|dracula|nord|monokai|custom)
-# Available themes: default, cyberpunk, vscode-dark, vscode-light, chatgpt, dracula, nord, monokai, custom
+# Available themes: light, cyberpunk, vscode-dark, vscode-light, chatgpt, dracula, nord, monokai, custom
+# Default: cyberpunk
 DEFAULT_THEME=cyberpunk
+
+# Server Configuration
+# Port number for Config Studio web interface (type:number, min:1, max:65535)
+# Default: 8880
+DOTENV_UI_PORT=8880
+
+# Data Directory Configuration
+# Directory where Config Studio stores its registry and settings
+# Can be relative (to current directory) or absolute path
+# Default: ./data
+DOTENV_UI_DATA_DIR=data
+
+# Startup Configuration
+# Automatically register a config file when Config Studio starts
+# Leave empty if not needed
+CONFIG_STUDIO_CONFIG_PATH=
+
+# Startup System Name
+# Custom name for the startup config (used with CONFIG_STUDIO_CONFIG_PATH)
+# Leave empty if not needed
+CONFIG_STUDIO_SYSTEM_NAME=
