refactor: rename all DOTENV_UI references to CONFIG_STUDIO
- Updated environment variables to use CONFIG_STUDIO_* naming
- CONFIG_STUDIO_PORT replaces DOTENV_UI_PORT
- CONFIG_STUDIO_DATA_DIR replaces DOTENV_UI_DATA_DIR
- CONFIG_STUDIO_SETTINGS replaces DOTENV_UI_SETTINGS
- Maintained backward compatibility with DOTENV_UI_* variables
- Updated README.md documentation with new naming
- Updated .env.config-studio template file

--- a/.env.config-studio
+++ b/.env.config-studio
@@ -10,13 +10,13 @@ DEFAULT_THEME=cyberpunk
 # Server Configuration
 # Port number for Config Studio web interface (type:number, min:1, max:65535)
 # Default: 8880
-DOTENV_UI_PORT=8880
+CONFIG_STUDIO_PORT=8880
 
 # Data Directory Configuration
 # Directory where Config Studio stores its registry and settings
 # Can be relative (to current directory) or absolute path
 # Default: ./data
-DOTENV_UI_DATA_DIR=data
+CONFIG_STUDIO_DATA_DIR=data
 
 # Startup Configuration
 # Automatically register a config file when Config Studio starts
