refactor: rename DEFAULT_THEME to CONFIG_STUDIO_THEME
- Renamed DEFAULT_THEME to CONFIG_STUDIO_THEME for consistency with other config variables
- Updated .env.config-studio template file
- Updated fallback content in startup.js and index.js
- Maintained backward compatibility: checks CONFIG_STUDIO_THEME first, then DEFAULT_THEME
- All configuration variables now use CONFIG_STUDIO_ prefix

--- a/.env.config-studio
+++ b/.env.config-studio
@@ -4,7 +4,7 @@
 
 # Theme Configuration
 # Available themes: light, cyberpunk, vscode-dark, vscode-light, chatgpt, dracula, nord, monokai, custom
-DEFAULT_THEME=cyberpunk
+CONFIG_STUDIO_THEME=cyberpunk
 
 # Server Configuration
 # Port number for Config Studio web interface (type:number, min:1, max:65535)
