--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "management",
     "editor"
   ],
-  "author": "",
+  "author": "Boqiang Liang <boqiang.liang@easynet.world>",
   "license": "MIT",
   "repository": {
     "type": "git",
